--- a/rtt-master/package.json
+++ b/rtt-master/package.json
@@ -6,10 +6,16 @@
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.1.1",
+    "cookie-parser": "^1.4.3",
+    "eslint": "^5.6.0",
+    "express-hbs": "^1.0.4",
+    "express-session": "^1.15.6",
+    "express-validator": "^5.3.0",
     "font-awesome": "^4.7.0",
     "history": "^4.7.2",
     "jquery": "^3.3.1",
     "mongoose": "^5.2.13",
+    "path": "^0.12.7",
     "popper": "^1.0.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
