--- a/rtt-master/package.json
+++ b/rtt-master/package.json
@@ -4,17 +4,26 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.1.1",
     "cookie-parser": "^1.4.3",
+    "cors": "^2.8.4",
+    "crypto": "^1.0.1",
+    "errorhandler": "^1.5.0",
     "eslint": "^5.6.0",
     "express-hbs": "^1.0.4",
+    "express-jwt": "^5.3.1",
     "express-session": "^1.15.6",
     "express-validator": "^5.3.0",
     "font-awesome": "^4.7.0",
     "history": "^4.7.2",
     "jquery": "^3.3.1",
+    "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.2.13",
+    "morgan": "^1.9.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "popper": "^1.0.1",
     "react": "^16.3.2",
@@ -30,7 +39,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && nodemon server.js",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
